@@ -1,0 +1,20 @@
+object SplashscreenWindow: TSplashscreenWindow
+  Left = 493
+  Height = 80
+  Top = 160
+  Width = 168
+  BorderStyle = bsNone
+  Caption = 'preparing'
+  ClientHeight = 80
+  ClientWidth = 168
+  FormStyle = fsSplash
+  object Label1: TLabel
+    Left = 16
+    Height = 37
+    Top = 16
+    Width = 141
+    Caption = 'preparing ...'
+    Font.Height = -27
+    ParentFont = False
+  end
+end
