@@ -1,0 +1,42 @@
+unit Splashscreen;
+
+{
+  The contents of this file are subject to the terms of the
+  Common Development and Distribution License, Version 1.1 only
+  (the "License").  You may not use this file except in compliance
+  with the License.
+
+  See the file LICENSE in this distribution for details.
+  A copy of the CDDL is also available via the Internet at
+  https://spdx.org/licenses/CDDL-1.1.html
+
+  When distributing Covered Code, include this CDDL HEADER in each
+  file and include the contents of the LICENSE file from this
+  distribution.
+}
+
+{$mode ObjFPC}{$H+}
+
+interface
+
+uses
+  Classes, SysUtils, Forms, Controls, Graphics, Dialogs, StdCtrls;
+
+type
+
+  { TSplashscreenWindow }
+
+  TSplashscreenWindow = class(TForm)
+    Label1: TLabel;
+  private
+
+  public
+
+  end;
+
+implementation
+
+{$R *.lfm}
+
+end.
+
